# epistemic-gap-finder

./: .gitignore  CHANGELOG.md  HOW-TO.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: run_demo_philosophy.ps1  run_demo_software.ps1
demo/genre/: Afrofuturism.md  AltHistory.md  BioPunk.md  ClimateSciFi.md  DarkAcademia.md  DarkFantasy.md  Dystopian.md  Epic.md  FirstContact.md  GasLamp.md  Grimdark.md  HardSciFi.md  HighFantasy.md  HopePunk.md  Isekai.md  LitRPG.md  LowFantasy.md  MagicRealism.md  MilitarySciFi.md  Mythic.md  NewWeird.md  NobleBright.md  PlantentaryRomance.md  Portal.md  PostApoc.md  ProgFantasy.md  Romantasy.md  ScienceFantasy.md  SlipStream.md  SoftSciFi.md  SolarPunk.md  Space Western.md  SpaceOpera.md  SteamPunk.md  SwordAndPlanet.md  SwordAndSorcery.md  TimeTravel.md  UrbanFantasy.md  Weird.md  cyberPunk.md
demo/philosophy/: analytic.md  continental.md  empiricism.md  existentialism.md  kantian-deontology.md  phenomenology.md  pragmatism.md  rationalism.md  stoicism.md  utilitarianism.md
demo/rpgs/: CallOfC.md  Dungeonworld.md  GammaWorld.md  Gurps.md  MOTW.md  OSRIC.md  OneRing.md  RuneQuest.md  Shadowrun.md  (+10 more)
egf/: __init__.py  candidates.py  cli.py  density.py  domain.py  embedder.py  gaps.py  llm.py  loader.py  quality.py  reducer.py  report.py  vocabulary.py
tests/: test_candidates.py  test_cli.py  test_density.py  test_domain.py  test_embedder.py  test_gaps.py  test_integration_pipeline.py  test_llm.py  test_loader.py  test_quality.py  test_reducer.py  test_report.py  test_scaffold.py  test_vocabulary.py
(+6 files in other folders)
