[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["egf"]

[project]
name = "epistemic-gap-finder"
version = "0.0.1"
description = "A conceptual cartography instrument — find what's absent from any knowledge space."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    "sentence-transformers>=2.7",
    "jinja2>=3.1",
    "plotly>=5.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
# hdbscan requires a C compiler (MSVC on Windows) or a prebuilt wheel.
# No binary wheel is available for Python 3.14 on Windows as of this scaffold.
# Install separately when a compatible wheel ships, or use Python <=3.12.
clustering = [
    "hdbscan>=0.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-jinja2",
]

[project.scripts]
egf = "egf.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=egf --cov-report=term-missing --cov-fail-under=0"
